# cse6040-devkit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API.md  assignment-project.md  overview.md  plugins.md  sampler-testing.md  test_case.md
docs/exam/: difficulty.md  exam.md  midterm-1.md  midterm-2.md
docs/tutorial/: how_it_goes_together.md  included_functions.md  plugins.md  preload_objects.md  project_setup.md  register_demo.md  register_sampler.md  register_solution.md  tutorial.md
src/cse6040_devkit/: README.md  assignment.py  plugins.py  sampler_testing.py  utils.py
src/cse6040_devkit/docs/: assignment-api.md  assignment-configuration.md  assignment-definition.md  assignment-notebook.md  utils.md
src/cse6040_devkit/templates/: footer.jinja  global_imports.jinja  header.jinja  preload_from_file.jinja  prompt.jinja  solution.jinja  test.jinja  test_boilerplate.jinja
src/cse6040_devkit/test_case/: input_gen_utils.py  sample_gen.py  test_case_gen.py
test/: .gitignore
test/basic_function/: asn_def.py  environment.yaml  keys.dill  main.ipynb  test.py  walkthrough.md
test/build_process/: assignment_definition.py  keys.dill  main.ipynb
test/mt1-fa24-main/: test.py  work.py
test/plugins/: work.py
test/randomness/: keys.dill  main.ipynb  second_nb.ipynb  work.py
test/video/: asn_def.py  keys.dill  main.ipynb
tests/: .gitignore
tests/basic_test/: .gitignore  build.py  build_log.txt  demos.py  helpers.py  keys.dill  main.ipynb  sampler_test.ipynb  samplers.py  solutions.py
tests/simple_demo/: asn_def.py  keys.dill  main.ipynb
(+26 files in other folders)
